--- a/4/css/style5e1f.css
+++ b/4/css/style5e1f.css
@@ -6,10 +6,10 @@ h1,h2,h3,h4,h5,h6, body {
 }
 p{
 	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 300;
+	/*font-weight: 300;
 	font-size: 18px;
 	line-height: 24px;
-	margin-bottom: 20px;
+	margin-bottom: 20px;*/
 }
 body {
 	padding-top: 0;
