--- a/1/css/style.css
+++ b/1/css/style.css
@@ -293,9 +293,10 @@ h6 { font-size: 16px; }
 #slider {
 	position: relative;
 	overflow: hidden;
+	margin-top: 85px;
 }
 	#camera_wrap_1 .camera_caption {
-		bottom: 20%;
+		bottom: 40%;
 		left: 15%;
 		width: 70%;
 	}
