--- a/1/js/plugins/camera/css/camera.css
+++ b/1/js/plugins/camera/css/camera.css
@@ -213,7 +213,7 @@
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	text-align: right;
+	text-align: center;
 }
 .camera_wrap .camera_pag .camera_pag_ul li {
 	-webkit-border-radius: 8px;
@@ -437,7 +437,7 @@
 	background: #b7b7b7;
 }
 .camera_wrap .camera_pag .camera_pag_ul li.cameracurrent > span {
-	background: #434648;
+	background: #FEC800;
 }
 .camera_pag_ul li img {
 	border: 4px solid #e6e6e6;
